27.New command: POSE, with new filter INI entry for it: POSEFILTER.  DISABLEd in coffeemud.ini file by default.
28.Old accounts will now be purged when they run out of characters. See INI entry: ACCOUNTPURGE
29.New Scriptable Functions: ISSPEAKING, ISCONTENTS, WORNON
30.Clan types (governments) are now configurable with clangovernments.xml, create, modify, destroy, mudgrinder
31.Racial Effects are now implemented as inexpensively as possible.  See genraces in command line & mudgrinder.
32.Clans (via their governments) now support custom help entries, clan effects, and clan abilities.
33.COMPARE command can now be used to compare container capacity
34.Can now create exception lists for DEFCMDTIME and DEFABLETIME in coffeemud.ini file/control panel.
35.Commands LOAD/UNLOAD now can be done manually by players for ranged weapons requiring ammunition.
36.Affect now shows disposition, and time remaining on spells.
37.Gathering skills are a 1/3 more stingy, and Crafting skills sort their lists by level now.
38.Foreign CharSet localization support (char names, lists.ini (file loading/saving in general), web file editor, misc problems...)
# Build 5.7.1 Release 3/12/2010
1. Bug Fix worth mentioning: custom mxp images restored, fakedb typo
2. AutoMapping system available -- see AWARERANGE in INI file and Control Panel
3. Can now create/destroy/list debugflag and disableflag (same as debug= disable= in coffeemud.ini file -- changes are TEMPORARY!)
4. Channel Commands by themselves now automatically show last X messages where X<=5
5. Channel LAST (previous) messages now append an ellapsed time since the message was sent.
# Build 5.7.2 Release 3/?/2010
1. New Area Type: StdAutoGenInstance, for creating random area instances based on random area generator
2. Player WHERE now displays a more informative table
3. AREAS command now has sorting options.
4. LISTS.INI changed to include weather & sun movement.  Each entry can now hold numerous variable entries for variety now! 