@@ -196,22 +196,35 @@ PROWESS_DESCS=\
 # modifiable.  Roughly speaking, the order is MISSILE, THROWN, SLASH/BASH, OTHER, PIERCE
 # This table is only used when a weapon is being wielded.
 WEAPON_MISS_DESCS=\
-    <S-NAME> fire(s) at <T-NAMESELF> with <TOOLNAME> and miss(es).,\
-    <S-NAME> throw(s) <TOOLNAME> at <T-NAMESELF> and miss(es).,\
-    <S-NAME> swing(s) at <T-NAMESELF> with <TOOLNAME> and miss(es).,\
-    <S-NAME> attack(s) <T-NAMESELF> with <TOOLNAME> and miss(es).,\
-    <S-NAME> lunge(s) at <T-NAMESELF> with <TOOLNAME> and miss(es).
+    <S-NAME> fire(s) at <T-NAMESELF> with <TOOLNAME> and miss(es). | <S-YOUPOSS> shot with <TOOLNAME> miss(es) <T-NAMESELF>. | <S-NAME> fire(s) and miss(es) <T-NAMESELF> with <TOOLNAME>. | <S-NAME> miss(es) <T-NAMESELF> with <S-HIS-HER> shot from <TOOLNAME>.  | <S-NAME> shoot(s) <TOOLNAME> at <T-NAMESELF> and miss(es). ,\
+    <S-NAME> throw(s) <TOOLNAME> at <T-NAMESELF> and miss(es).  | <S-YOUPOSS> throw of <TOOLNAME> miss(es) <T-NAMESELF>.  | <S-NAME> throw(s) and miss(es) <T-NAMESELF> with <TOOLNAME>. | <S-NAME> miss(es) <T-NAMESELF> with <S-HIS-HER> throw of <TOOLNAME>.  | <S-NAME> throw(s) <TOOLNAME> at <T-NAMESELF> and miss(es). ,\
+    <S-NAME> swing(s) at <T-NAMESELF> with <TOOLNAME> and miss(es).  | <S-YOUPOSS> swing of <TOOLNAME> miss(es) <T-NAMESELF>.  | <S-NAME> swing(s) and miss(es) <T-NAMESELF> with <TOOLNAME>. | <S-NAME> miss(es) <T-NAMESELF> with <S-HIS-HER> swing of <TOOLNAME>.  | <S-NAME> swing(s) <TOOLNAME> at <T-NAMESELF> and miss(es). ,\
+    <S-NAME> attack(s) <T-NAMESELF> with <TOOLNAME> and miss(es).  | <S-YOUPOSS> attack with <TOOLNAME> miss(es) <T-NAMESELF>.  | <S-NAME> attack(s) and miss(es) <T-NAMESELF> with <TOOLNAME>. | <S-NAME> miss(es) <T-NAMESELF> with <S-HIS-HER> attack with <TOOLNAME>.  | <S-NAME> attack(s) <TOOLNAME> at <T-NAMESELF> and miss(es). ,\
+    <S-NAME> lunge(s) at <T-NAMESELF> with <TOOLNAME> and miss(es).  | <S-YOUPOSS> lunge with <TOOLNAME> miss(es) <T-NAMESELF>.  | <S-NAME> thrust(s) and miss(es) <T-NAMESELF> with <TOOLNAME>. | <S-NAME> miss(es) <T-NAMESELF> with <S-HIS-HER> lunge with <TOOLNAME>.  | <S-NAME> thrust(s) <TOOLNAME> at <T-NAMESELF> and miss(es).
     
 # MISS_DESCS is a chart consisting of standard miss strings.  The number of
 # items in this table can not be changed, nor can their order -- only the text is
 # modifiable.  Roughly speaking, the order is MISSILE, THROWN, SLASH/BASH, OTHER, PIERCE
 # This table is only used when a weapon is unavailable.
 MISS_DESCS=\
-    <S-NAME> fire(s) at <T-NAMESELF> and miss(es).,\
-    <S-NAME> throw(s) at <T-NAMESELF> and miss(es).,\
-    <S-NAME> swing(s) at <T-NAMESELF> and miss(es).,\
-    <S-NAME> attack(s) <T-NAMESELF> and miss(es).,\
-    <S-NAME> lunge(s) at <T-NAMESELF> and miss(es).
+    <S-NAME> fire(s) at <T-NAMESELF> and miss(es). | <S-NAME> shoot(s) and miss(es) <T-NAMESELF>. | <S-YOUPOSS> shot miss(es) <T-NAMESELF>. ,\
+    <S-NAME> throw(s) at <T-NAMESELF> and miss(es). | <S-NAME> throw(s) and miss(es) <T-NAMESELF>. | <S-YOUPOSS> throw miss(es) <T-NAMESELF>. ,\
+    <S-NAME> swing(s) at <T-NAMESELF> and miss(es). | <S-NAME> swing(s) and miss(es) <T-NAMESELF>. | <S-YOUPOSS> swing miss(es) <T-NAMESELF>. ,\
+    <S-NAME> attack(s) <T-NAMESELF> and miss(es). | <S-NAME> attack(s) and miss(es) <T-NAMESELF>. | <S-YOUPOSS> attack miss(es) <T-NAMESELF>. ,\
+    <S-NAME> lunge(s) at <T-NAMESELF> and miss(es) | <S-NAME> lunge(s) and miss(es) <T-NAMESELF>.  | <S-YOUPOSS> lunge miss(es) <T-NAMESELF>.
+    
+# WEAPON_MISS_DESCS is a chart consisting of standard hit strings.  The number of
+# items in this table can not be changed, nor can their order -- only the text is
+# modifiable.  Roughly speaking, the order is MISSILE, THROWN, SLASH/BASH, OTHER, PIERCE
+# <DAMAGE> is replaced with a damage word from below.
+# <TOOLNAME> is replaced with teh weapon name.
+# This table is only used when a weapon is being wielded.
+WEAPON_HIT_DESCS=\
+    <S-NAME> <DAMAGE> <T-NAMESELF> with <TOOLNAME>. | <S-NAME> fire(s) <TOOLNAME> at <T-NAMESELF> and <DAMAGE> <T-HIM-HER>. |  <S-NAME> fire(s) at <T-NAMESELF> with <TOOLNAME> and <DAMAGE> <T-HIM-HER>. | <S-YOUPOSS> shot with <TOOLNAME> <DAMAGE> <T-NAMESELF>. | <S-NAME> fire(s) and <DAMAGE> <T-NAMESELF> with <TOOLNAME>. | <S-NAME> <DAMAGE> <T-NAMESELF> with <S-HIS-HER> short from <TOOLNAME>.  | <S-NAME> shoot(s) <TOOLNAME> at <T-NAMESELF> and <DAMAGE> <T-HIM-HER>. , \
+    <S-NAME> <DAMAGE> <T-NAMESELF> with <TOOLNAME>. | <S-NAME> throw(s) <TOOLNAME> at <T-NAMESELF> and <DAMAGE> <T-HIM-HER>.  | <S-YOUPOSS> throw of <TOOLNAME> <DAMAGE> <T-NAMESELF>. | <S-NAME> <DAMAGE> <T-NAMESELF> with <S-HIS-HER> throw of <TOOLNAME>.  | <S-NAME> throw(s) <TOOLNAME> at <T-NAMESELF> and <DAMAGE> <T-HIM-HER>. ,\
+    <S-NAME> <DAMAGE> <T-NAMESELF> with <TOOLNAME>. | <S-NAME> swing(s) <TOOLNAME> at <T-NAMESELF> and <DAMAGE> <T-HIM-HER>. | <S-YOUPOSS> swing of <TOOLNAME> <DAMAGE> <T-NAMESELF>.  | <S-NAME> <DAMAGE> <T-NAMESELF> with <S-HIS-HER> swing with <TOOLNAME>.  | <S-NAME> swing(s) <TOOLNAME> at <T-NAMESELF> and  <DAMAGE> <T-HIM-HER>. ,\
+    <S-NAME> <DAMAGE> <T-NAMESELF> with <TOOLNAME>. | <S-NAME> bring(s) <TOOLNAME> against <T-NAMESELF> and <DAMAGE> <T-HIM-HER>.  | <S-YOUPOSS> attack with <TOOLNAME> <DAMAGE> <T-NAMESELF>. | <S-NAME> <DAMAGE> <T-NAMESELF> with <S-HIS-HER>  attack with <TOOLNAME>.  | <S-NAME> bring(s) <TOOLNAME> attack to <T-NAMESELF> and <DAMAGE> <T-HIM-HER>. ,\
+    <S-NAME> <DAMAGE> <T-NAMESELF> with <TOOLNAME>. | <S-NAME> thrust(s) <TOOLNAME> at <T-NAMESELF> and <DAMAGE> <T-HIM-HER>. | <S-YOUPOSS> thrust with <TOOLNAME> <DAMAGE> <T-NAMESELF>.  | <S-NAME> <DAMAGE> <T-NAMESELF> with <S-HIS-HER> thrust with <TOOLNAME>.  | <S-NAME> thrust(s) <TOOLNAME> at <T-NAMESELF> and <DAMAGE> <T-HIM-HER>.
 
 # DAMAGE_WORDS_THRESHOLDS is a chart of thresholds for mapping damage words to actual
 # damage amounts.  This table can have entries added or removed, but only if all the 
